fix(frontend): increase contrast of pagination links colour

--- a/frontend/src/assets/stylesheets/main.scss
+++ b/frontend/src/assets/stylesheets/main.scss
@@ -923,7 +923,7 @@ nav.pagination {
       display: block;
       text-align: center;
       a {
-        color: gray;
+        color: $darkgray;
         text-decoration: none;
         &:hover {
           color: black;
